conv-app/rmq/rmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8.34-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            limits:
              memory: "800Mi"
              cpu: "500m"
          volumeMounts:
            - name: rabbitmq-data-test
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data-test
          persistentVolumeClaim:
            claimName: rabbitmq-pvc-test
